# NeuroArcade

./: .buildinfo  .gitignore  ARCHITECTURE.md  Architecture.html  CONTRIBUTING.md  Contributing.html  MANIFEST.in  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: sphinx.yml
_sources/: Contributing.md.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: controls.rst.txt  transforms.rst.txt
api/: controls.html  core.html  games.html  main.html  transforms.html  ui.html  utils.html  visualizers.html
docs/: requirements.txt
docs/source/: Architecture.md  Architecture.rst  Contributing.md  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: core.rst  games.rst  main.rst  ui.rst  utils.rst  visualizers.rst
src/neuroarcade/: __init__.py  main.py
src/neuroarcade/controls/: ExpressionTracker.py  FaceTracker.py  GazeTracker.py  HandGestures.py  KeyboardControl.py  ObjectDetection.py  PostureTracker.py  QRTracker.py  QrTrack.py  base.py
src/neuroarcade/core/: SoundManager.py
src/neuroarcade/games/: MazeRunner.py  MemoryPath.py  ReactionTarget.py  SnakeGame.py  TargetReachGame.py  base.py
src/neuroarcade/transforms/: Identity.py  InvertedX.py  InvertedXY.py  InvertedY.py  Rotated45Left.py  Rotated45Right.py  Rotated90Left.py  Rotated90Right.py  __init__.py  base.py
src/neuroarcade/ui/: InstructionsWindow.py  MainWindow.ui  configurator.py  instructions_html.py
src/neuroarcade/utils/: loader.py
src/neuroarcade/visualizers/: controls.py
